UPDATE: Color palette change

--- a/src/shared/components/FormElements/Button.css
+++ b/src/shared/components/FormElements/Button.css
@@ -1,9 +1,9 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #ff0055;
+  border: 1px solid #ff645a;
   border-radius: 4px;
-  background: #ff0055;
+  background: #ff645a;
   color: white;
   cursor: pointer;
   margin-right: 1rem;
@@ -17,24 +17,24 @@
 
 .button:hover,
 .button:active {
-  background: #ff4382;
-  border-color: #ff4382;
+  background: #ff645a;
+  border-color: #ff645a;
 }
 
 .button--inverse {
   background: transparent;
-  color: #ff0055;
+  color: #ff645a;
 }
 
 .button--inverse:hover,
 .button--inverse:active {
   color: white;
-  background: #ff0055;
+  background: #ff645a;
 }
 
 .button--danger {
-  background: #830000;
-  border-color: #830000;
+  background: #ff2e1f;
+  border-color: #ff2e1f;
 }
 
 .button--danger:hover,
