--- a/src/shared/components/Navigation/NavigationLinks.css
+++ b/src/shared/components/Navigation/NavigationLinks.css
@@ -18,14 +18,14 @@
     border: 1px solid transparent;
     color: #292929;
     text-decoration: none;
-    padding: 0.5rem;
+    padding: 1rem;
+    border-radius: 2rem;
   }
   
   .nav-links a:hover,
   .nav-links a:active,
   .nav-links a.active {
-    background: #f8df00;
-    border-color: #292929;
+    background: #e9e9e9;
     color: #292929;
   }
   
@@ -33,7 +33,7 @@
     cursor: pointer;
     border: 1px solid #292929;
     color: #292929;
-    background: transparent;
+    background: green;
     padding: 0.5rem;
     font: inherit;
   }
@@ -44,8 +44,8 @@
   
   .nav-links button:hover,
   .nav-links button:active {
-    background: #292929;
-    color: white;
+    background: #faf7f6;
+    color: #000;
   }
   
   @media (min-width: 768px) {
@@ -63,14 +63,15 @@
     }
   
     .nav-links button {
-      border: 1px solid white;
+      border-radius: 2rem;
+      padding: 1rem;
       color: white;
-      background: transparent;
+      background: #f34343b2;
     }
     
     .nav-links button:hover,
     .nav-links button:active {
-      background: #f8df00;
-      color: #292929;
+      background: #f34343;
+      color: white;
     }
   }
