--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-  margin: 0;
-  background: #4d4d4d;
+  margin: 8rem 0 0 0;
+  background: #323232;
 }
 
 .slide-in-left-enter {
