--- a/src/shared/components/Navigation/MainHeader.css
+++ b/src/shared/components/Navigation/MainHeader.css
@@ -1,12 +1,13 @@
 .main-header {
   width: 100%;
-  height: 4rem;
+  height: 6rem;
   display: flex;
   align-items: center;
   position: fixed;
   top: 0;
   left: 0;
-  background: #ff0055;
+  background: #323232;
+  color: white;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
   padding: 0 1rem;
   z-index: 5;
