--- a/src/user/components/UserItem.css
+++ b/src/user/components/UserItem.css
@@ -17,7 +17,7 @@
 
 .user-item a:hover,
 .user-item a:active {
-  background: #ffd900;
+  background: #e9e9e9;
 }
 
 .user-item__content {
@@ -33,8 +33,8 @@
 .user-item__info h2 {
   font-size: 1.5rem;
   margin: 0 0 0.5rem 0;
-  font-weight: normal;
-  color: #ffd900;
+  font-weight: lighter;
+  font-family: 'Open Sans', sans-serif
 }
 
 .user-item:hover h2,
@@ -46,4 +46,6 @@
 
 .user-item__info h3 {
   margin: 0;
+  font-size: 1rem;
+  font-weight: lighter;
 }
