Update: Button styling.

--- a/src/shared/components/Navigation/NavigationLinks.css
+++ b/src/shared/components/Navigation/NavigationLinks.css
@@ -31,10 +31,12 @@
   
   .nav-links button {
     cursor: pointer;
-    border: 1px solid #292929;
-    color: #292929;
-    background: green;
-    padding: 0.5rem;
+    background: #f34343;
+    border-radius: 2rem;
+    padding: 1rem;
+    color: white;
+    border: none;
+    outline: none;
     font: inherit;
   }
   
